<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="false"
    tools:context=".BookingPage">

    <TextView
        android:id="@+id/name_label"
        android:layout_width="85dp"
        android:layout_height="39dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="68dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/name_label"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/booking_label" />

    <TextView
        android:id="@+id/time_label"
        android:layout_width="85dp"
        android:layout_height="39dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/time_label"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_label" />

    <TextView
        android:id="@+id/seatcount_label"
        android:layout_width="168dp"
        android:layout_height="34dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/seatcount_label"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_label" />

    <TextView
        android:id="@+id/number_label"
        android:layout_width="85dp"
        android:layout_height="39dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/phone_label"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_label" />

    <TextView
        android:id="@+id/booking_label"
        android:layout_width="386dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="46dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/booking_label"
        android:textColor="#3F51B5"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/person_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/booking_label"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/person_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/person_name"
        tools:ignore="LabelFor" />

    <SeekBar
        android:id="@+id/seatcount_bar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="330dp"
        android:layout_height="42dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:clickable="false"
        android:focusable="auto"
        android:max="8"
        android:progress="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seatcount" />

    <TextView
        android:id="@+id/seatcount"
        android:layout_width="58dp"
        android:layout_height="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="36dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/seatcount_label"
        app:layout_constraintTop_toBottomOf="@+id/input_time" />

    <Button
        android:id="@+id/book_button"
        android:layout_width="107dp"
        android:layout_height="45dp"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="141dp"
        android:layout_marginRight="141dp"
        android:background="@color/colorAccent"
        android:fontFamily="sans-serif-light"
        android:text="@string/book_button"
        android:textColor="#3F51B5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seatcount_bar"
        app:layout_constraintVertical_bias="0.151" />

    <Spinner
        android:id="@+id/input_time"
        android:layout_width="163dp"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:entries="@array/time_arrays"
        android:prompt="@string/time_prompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/person_phone" />

</androidx.constraintlayout.widget.ConstraintLayout>
