<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestaurantDescActivity">

    <Button
        android:id="@+id/contactbutton"
        android:layout_width="164dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:fontFamily="sans-serif-light"
        android:text="@string/contactbutton"
        android:textColor="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonemail" />

    <TextView
        android:id="@+id/contactHeader"
        android:layout_width="409dp"
        android:layout_height="47dp"
        android:background="#00FFFFFF"
        android:fontFamily="sans-serif-light"
        android:textColor="#3F51B5"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@android:style/Widget.DeviceDefault.RatingBar.Small"
        android:layout_width="78dp"
        android:layout_height="18dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.966"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="408dp"
        android:layout_height="176dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-light"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="302dp"
        android:layout_height="30dp"
        android:layout_marginTop="156dp"
        android:fontFamily="sans-serif-light"
        android:textColor="#00BCD4"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactHeader" />

    <Button
        android:id="@+id/button5"
        android:layout_width="164dp"
        android:layout_height="43dp"
        android:background="@color/colorAccent"
        android:fontFamily="sans-serif-light"
        android:text="@string/makeresbutton"
        android:textColor="#3F51B5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.363" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="252dp"
        android:layout_height="35dp"
        android:fontFamily="sans-serif-light"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.258" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="249dp"
        android:layout_height="42dp"
        android:fontFamily="sans-serif-light"
        android:gravity="end"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.929"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactHeader" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="118dp"
        android:layout_height="21dp"
        android:autoLink="phone"
        android:gravity="end"
        android:linksClickable="true"
        app:layout_constraintBottom_toTopOf="@+id/ratingBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.961"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactHeader"
        app:layout_constraintVertical_bias="0.858" />

    <Button
        android:id="@+id/buttonemail"
        android:layout_width="164dp"
        android:layout_height="43dp"
        android:background="@color/colorAccent"
        android:fontFamily="sans-serif-light"
        android:text="@string/view_menu"
        android:textColor="#3F51B5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintVertical_bias="0.068" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_deck_24"
        tools:ignore="VectorDrawableCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>